updated with grunt tasks, updated readme

--- a/lib/scss/main.scss
+++ b/lib/scss/main.scss
@@ -1,7 +1,7 @@
 // Modules and Variables
-@import "partials/reset";
-@import "partials/util";
-@import "partials/brand";
+@import "modules/reset";
+@import "modules/util";
+@import "modules/brand";
 // End Modules and Variables ... 
 
 // Partials
