--- a/lib/scss/modules/util.scss
+++ b/lib/scss/modules/util.scss
@@ -1,7 +1,10 @@
 // This file will be used to hold all utility extends and extras...
+$content-empty: '';
+
 //----- Extends
 %clearfix:after {
-    display:block;
-    clear:both;
-    content:'';
+  display:block;
+  clear:both;
+  content:$content-empty;
 }
+
